fix: actor selection not centered due to container missing full height

--- a/css/cortexprime.css
+++ b/css/cortexprime.css
@@ -2587,6 +2587,10 @@ p {
   white-space: nowrap;
 }
 
+.actor-selection {
+  height: 100%;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
